Add profiling instructions and add tests to clj-repl command